--- a/cadastro.html
+++ b/cadastro.html
@@ -8,7 +8,11 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Cadastro</h1>
-    
+    <div class="container">
+        <h1>Cadastro</h1>
+        <label for="">Nome</label>
+        <input type="text" id="nomeUser" name="">
+        <button type="button">Salvar</button>
+    </div>
 </body>
 </html>
