--- a/cadastro.html
+++ b/cadastro.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cadastro</title>
@@ -11,8 +12,17 @@
     <div class="container">
         <h1>Cadastro</h1>
         <label for="">Nome</label>
-        <input type="text" id="nomeUser" name="">
-        <button type="button">Salvar</button>
+        <input type="text" class="form-control" id="nomeUser" name="">
+        <button style="margin-top: 20px;" type="button" class="btn btn-success">Salvar</button>
     </div>
+    <div class="container">
+        <table class="table table triped"
+        id="tabela">
+        <tr>
+            <tr>
+                <th>Nome</th>
+                <th>Ações</th>
+        </tr>
+    </table>
 </body>
 </html>
