adiciona tabela e salvando nomes com a opção de editar ou excluir

--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
         <h1>Cadastro</h1>
         <label for="">Nome</label>
         <input type="text" class="form-control" id="nomeUser" name="">
-        <button style="margin-top: 20px;" type="button" class="btn btn-success">Salvar</button>
+        <button style="margin-top: 20px;" type="button" class="btn btn-success" onclick="salvarUser()">Salvar</button>
     </div>
     <div class="container">
         <table class="table table triped"
